riempita prima my-col-2-3

--- a/index.html
+++ b/index.html
@@ -77,23 +77,32 @@
 
                                 <div class="card">
                                     <h3>
-
+                                        Get a demo application
                                     </h3>
 
                                     <p>
-
+                                        Lorem ipsum dolor, sit amet consectetur 
+                                        adipisicing elit. Ratione nobis, 
+                                        architecto ad dolore quod, facere totam 
+                                        quas recusambe blanditiis.
                                     </p>
 
                                     <div>
 
-                                        <a href="#">
-
+                                        <a class="a-button-blue" href="#">
+                                            <p>
+                                                <i class="fa-brands fa-apple"></i>
+                                                <span>
+                                                    App Store
+                                                </span>
+                                            </p>
+                                            
                                         </a>
 
                                     </div>
 
-                                    <img src="" alt="">
-                                    
+                                    <img src="./img/phone.png" alt="phone">
+
                                 </div>
 
                             </div>
