Riempite tutte le sezioni, ora manca risistemare tutto

--- a/index.html
+++ b/index.html
@@ -340,15 +340,19 @@
                             <div class="my-col my-col-1-6-tablet background-row-white">
 
                                 <div>
-
+                                    01
                                 </div>
 
                                 <h3>
-
+                                    Hight Quality
                                 </h3>
 
                                 <p>
-
+                                    Lorem ipsum, dolor sit amet consectetur 
+                                    adipisicing elit. Error, est. Laudantium 
+                                    doloremque alias et perferendis labore, 
+                                    nisi at ducimus mollitia inventore aut 
+                                    incidunt voluptatem cumque.
                                 </p>
 
                                 <a href="#" class="button-purple">
@@ -362,37 +366,19 @@
                             <div class="my-col my-col-1-6-tablet background-row-white">
 
                                 <div>
-
+                                    02
                                 </div>
 
                                 <h3>
-
+                                    Creative Team
                                 </h3>
 
                                 <p>
-
-                                </p>
-
-                                <a href="#" class="button-purple">
-
-                                    more
-
-                                </a>
-
-                            </div>
-                            
-                            <div class="my-col my-col-1-6-tablet background-row-white">
-
-                                <div>
-
-                                </div>
-
-                                <h3>
-
-                                </h3>
-
-                                <p>
-
+                                    Lorem ipsum, dolor sit amet consectetur 
+                                    adipisicing elit. Error, est. Laudantium 
+                                    doloremque alias et perferendis labore, 
+                                    nisi at ducimus mollitia inventore aut 
+                                    incidunt voluptatem cumque.
                                 </p>
 
                                 <a href="#" class="button-purple">
@@ -406,15 +392,19 @@
                             <div class="my-col my-col-1-6-tablet background-row-white">
 
                                 <div>
-
+                                    03
                                 </div>
 
                                 <h3>
-
+                                    Amazing Result
                                 </h3>
 
                                 <p>
-
+                                    Lorem ipsum, dolor sit amet consectetur 
+                                    adipisicing elit. Error, est. Laudantium 
+                                    doloremque alias et perferendis labore, 
+                                    nisi at ducimus mollitia inventore aut 
+                                    incidunt voluptatem cumque.
                                 </p>
 
                                 <a href="#" class="button-purple">
@@ -428,15 +418,19 @@
                             <div class="my-col my-col-1-6-tablet background-row-white">
 
                                 <div>
-
+                                    04
                                 </div>
 
                                 <h3>
-
+                                    Best Pricing
                                 </h3>
 
                                 <p>
-
+                                    Lorem ipsum, dolor sit amet consectetur 
+                                    adipisicing elit. Error, est. Laudantium 
+                                    doloremque alias et perferendis labore, 
+                                    nisi at ducimus mollitia inventore aut 
+                                    incidunt voluptatem cumque.
                                 </p>
 
                                 <a href="#" class="button-purple">
@@ -450,15 +444,45 @@
                             <div class="my-col my-col-1-6-tablet background-row-white">
 
                                 <div>
-
+                                    05
                                 </div>
 
                                 <h3>
-
+                                    Innovation
                                 </h3>
 
                                 <p>
+                                    Lorem ipsum, dolor sit amet consectetur 
+                                    adipisicing elit. Error, est. Laudantium 
+                                    doloremque alias et perferendis labore, 
+                                    nisi at ducimus mollitia inventore aut 
+                                    incidunt voluptatem cumque.
+                                </p>
 
+                                <a href="#" class="button-purple">
+
+                                    more
+
+                                </a>
+
+                            </div>
+                            
+                            <div class="my-col my-col-1-6-tablet background-row-white">
+
+                                <div>
+                                    06
+                                </div>
+
+                                <h3>
+                                    24/7 Support
+                                </h3>
+
+                                <p>
+                                    Lorem ipsum, dolor sit amet consectetur 
+                                    adipisicing elit. Error, est. Laudantium 
+                                    doloremque alias et perferendis labore, 
+                                    nisi at ducimus mollitia inventore aut 
+                                    incidunt voluptatem cumque.
                                 </p>
 
                                 <a href="#" class="button-purple">
@@ -480,11 +504,28 @@
                                 <div class="right-tablet">
 
                                     <h2>
-
+                                        About Us
                                     </h2>
 
                                     <p>
-
+                                        Sample text. Click to Egestas egestas 
+                                        fringilla phasellus faucibus scelerisque 
+                                        eleifend dons pretium vulputate. Pharetra 
+                                        magna ac placerat vestibutum. Quam locus 
+                                        suspendisse faucibus interdum posuere lorem. 
+                                        Egestas tellus rutrum taus pellentesque eu tincidunt. 
+                                        Neque vitae tempus quam pellentesque nec. 
+                                        Vol elitscelerisque mauris pellentesque pulvinar 
+                                        pellentesque habitant morbi. Interdum velit 
+                                        euismod in pellentesque massa placerat duis. 
+                                        Quis viverra nibh cras pulvinar mantis. 
+                                        Ornare arcu dui vivamus arcu fells bibendum 
+                                        ut tristique. Pellentesque eu tincidunt tortor 
+                                        aliquam nulla facilisi cras fermentum odio. 
+                                        Dignissim diam gums enim lobortis scelerisque. 
+                                        Tellus molestie nunc non blandit massa enim. 
+                                        The text box. Click again or double click to 
+                                        start editing the text.
                                     </p>
 
                                 </div>
@@ -495,9 +536,10 @@
 
                                     <img src="./img/about.jpg" alt="about">
 
-                                    <b>
-
-                                    </b>
+                                    <h3>
+                                        I help companies tincidus tortor aliquam 
+                                        nulla facilis cras fermentum odio.
+                                    </h3>
 
                                     <a href="#" class="button-purple">
 
